# seabird-gps-database

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  helpers.sh  postgresql.conf
.github/workflows/: docker-publish.yml
admin/: Dockerfile  index.html  package.json  pnpm-lock.yaml
admin/src/: App.tsx  authProvider.ts  dataProvider.ts
admin/src/resources/: BulkEditSexButton.tsx  animal.tsx  chick.tsx  colony.tsx  deployment.tsx  logger.tsx  logger_instrumentation.tsx  (+1 more)
db/: Dockerfile  entrypoint.sh  schema.sql
db/migrations/: 20230320135310_add_postgis.sql  20230320140259_create_tables.sql  20230320140331_create_import_table.sql  20230321115200_add_postgrest_users.sql  20231011105311_postgis.sql  20231011106000_users.sql  20231011107000_import_table.sql  20231011110157_animal_and_ring.sql  20231011110410_colony.sql  20231011111640_deployment_and_chick.sql  20231011112823_logger.sql  20231012191628_import_function.sql  20231020141034_assign_id_if_null.sql  20231102100501_add_eggs_deployment_extra.sql  20231122005008_logger_data.sql  20231122005008_logger_instrumentation_unique_filename.sql  20231122005845_import_logger_data_gps.sql  20231122021711_import_logger_data_gps_pathtrack.sql  20240116110423_import_fields_view.sql  20240117072241_row_to_json_errors_detail.sql  20240117081051_import_filename_constraint.sql  20240117093556_rename_accelerometer_to_other_sensors.sql  20240117105114_logger_filename_required_logic.sql  20240223120820_extra.sql  20240314143212_multiple_filename.sql  20240314145815_rename_columns_v6.sql  20240314145816_fix_other_sensor_date.sql  20240508145816_readonly_user.sql  20240508145817_views.sql  20240508145818_related_loggers.sql  20240508145820_deployment_instead_ring.sql  20250917000000_logging.sql  20260213106000_users.sql  20260217106000_read_views.sql
logger2csv/: Cargo.toml
logger2csv/src/: logger.pest  main.rs
nginx/: default.conf.template
setup/: Dockerfile  docker-compose.yml  generate.sh
wizard/: .pdm-python  Dockerfile  entrypoint.sh  logger.py  parser.py  pyproject.toml  tasks.py  wizard.py
wizard/parsers/: helpers.py  parser.py  parser_accelerometer.py  parser_base.py  parser_excel.py  parser_gps.py  parser_gpx.py  parser_pathtrack.py  parser_tdr.py  parser_universal.py
wizard/parsers/accelerometer/: __init__.py
wizard/parsers/gps/: __init__.py  axytrek.py  base.py  blk.py  catlog.py  ecotone.py  gpx.py  ho11.py  igotu.py  interrex.py  jm.py  mataki.py  ornitela.py  pathtrack.py  unknown.py
wizard/parsers/other_sensor/: __init__.py  interrex.py
wizard/parsers/tdr/: __init__.py
wizard/parsers/tests/: parser_test.py
wizard/src/seapop_wizard/: settings.py  tasks.py  wizard.py
wizard/templates/: import_error.html
