[project]
name = "seapop-wizard"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"},
]
dependencies = [
    "pywebio>=1.7.0",
    "requests>=2.28.1",
    "openpyxl>=3.1.2",
    "orjson>=3.9.9",
    "jinja2>=3.1.3",
    "gpxpy>=1.6.2",
    "pyarrow>=14.0.2",
    "pandas>=2.3.3",
    "chardet>=5.2.0",
    "sentry-sdk>=1.40.5",
    "typer>=0.21.1",
    "schedule>=1.2.2",
    "structlog>=25.5.0",
]
requires-python = ">=3.11"
license = {text = "GPLv3"}

[dependency-groups]
dev = [
  "pytest"
]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812", "E501"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
